objects/Product2/fields/AcctSeed__Accounting_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Type__c</fullName>
    <inlineHelpText>Denotes if the product is taxable or not when calculating taxes on billings and payables. Otherwise indicates the product is a tax rate to be used in calculation.</inlineHelpText>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Taxable Product</fullName>
            </value>
            <value>
                <fullName>Tax Exempt Product</fullName>
            </value>
            <value>
                <fullName>Tax Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>