objects/Product2/fields/AcctSeedERP__Inventory_Asset__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Inventory_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox enables asset management for this product. With asset management an asset record is created when an inventory product is allocated to a sales order. The asset record is associated with the customer (account) and is used to track the product.</inlineHelpText>
    <label>Inventory Asset</label>
    <type>Checkbox</type>
</CustomField>