objects/Product2/fields/AcctSeedERP__Manufacturing_Order_Template__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Manufacturing_Order_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Order Template</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>