objects/Product2/fields/APPLICATION_del__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_del__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Haul</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>On/Off Road</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>HIGHWAY</fullName>
                <isActive>false</isActive>
                <label>HIGHWAY</label>
            </value>
            <value>
                <fullName>MIXED SERVICE</fullName>
                <isActive>false</isActive>
                <label>MIXED SERVICE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>