objects/Product2/fields/Aspect_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Aspect_Ratio__c</fullName>
    <label>Aspect Ratio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>