objects/Product2/fields/AXLE_POSITION__c.field-meta.xml
<CustomField>
    <fullName>AXLE_POSITION__c</fullName>
    <label>Axle Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DRIVE</fullName>
                <label>Drive</label>
            </value>
            <value>
                <fullName>STEER</fullName>
                <label>Steer</label>
            </value>
            <value>
                <fullName>ALL POSITION</fullName>
                <label>All Position</label>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>