objects/Product2/fields/BRAND__c.field-meta.xml
<CustomField>
    <fullName>BRAND__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HUBTRAC</fullName>
                <label>Hubtrac</label>
            </value>
            <value>
                <fullName>ARISUN</fullName>
                <label>Arisun</label>
            </value>
            <value>
                <fullName>PIRELLI</fullName>
                <label>Pirelli</label>
            </value>
            <value>
                <fullName>AEOLUS</fullName>
                <label>Aeolus</label>
            </value>
            <value>
                <fullName>ROADX</fullName>
                <label>RoadX</label>
            </value>
            <value>
                <fullName>Avantech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>