objects/Product2/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <label>Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>