objects/Product2/fields/Display_image__c.field-meta.xml
<CustomField>
    <fullName>Display_image__c</fullName>
    <formula>IF(Image_URL__c != &apos;&apos;,IMAGE(Image_URL__c, &quot;No Image&quot;, 50, 50),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display image</label>
    <type>Text</type>
</CustomField>