objects/Product2/fields/Domestic_Imported__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Imported__c</fullName>
    <label>Domestic / Imported</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>