objects/Product2/fields/FET_Product__c.field-meta.xml
<CustomField>
    <fullName>FET_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FET Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Master Products</relationshipLabel>
    <relationshipName>Master_Products</relationshipName>
    <type>Lookup</type>
</CustomField>