objects/Product2/fields/FET_Rate__c.field-meta.xml
<CustomField>
    <fullName>FET_Rate__c</fullName>
    <label>FET Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>