objects/Product2/fields/FET_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FET_TYPE__c</fullName>
    <label>FET TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FET 14PR</fullName>
                <label>FET 14 PR</label>
            </value>
            <value>
                <fullName>FET 16PR</fullName>
                <label>FET 16 PR</label>
            </value>
            <value>
                <fullName>FET 16PR-11R22.5</fullName>
                <label>FET 16 PR-11R22.5</label>
            </value>
            <value>
                <fullName>FET 14 PR-11R24.5</fullName>
            </value>
            <value>
                <fullName>FET 20PR-445/50R22.5</fullName>
                <label>FET 20 PR-445/50R22.5</label>
            </value>
            <value>
                <fullName>14 PR</fullName>
                <isActive>false</isActive>
                <label>14 PR</label>
            </value>
            <value>
                <fullName>16 PR</fullName>
                <isActive>false</isActive>
                <label>16 PR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>