objects/Product2/fields/FETProductid__c.field-meta.xml
<CustomField>
    <fullName>FETProductid__c</fullName>
    <formula>CASESAFEID(FET_Product__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FETProductid</label>
    <type>Text</type>
</CustomField>