objects/Product2/fields/Height_Inches__c.field-meta.xml
<CustomField>
    <fullName>Height_Inches__c</fullName>
    <label>Height (Inches)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>