objects/Product2/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(DisplayUrl,  Name  , 100, 100)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>