objects/Product2/fields/Inventory_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Tracked__c</fullName>
    <label>Inventory Tracked ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>