objects/Product2/fields/Is_Fuel_Efficient__c.field-meta.xml
<CustomField>
    <fullName>Is_Fuel_Efficient__c</fullName>
    <label>Is Fuel Efficient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>