objects/Product2/fields/Is_Smartway__c.field-meta.xml
<CustomField>
    <fullName>Is_Smartway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Smartway</label>
    <type>Checkbox</type>
</CustomField>