objects/Product2/fields/Load_Capacity_Dual_In_LBS__c.field-meta.xml
<CustomField>
    <fullName>Load_Capacity_Dual_In_LBS__c</fullName>
    <label>Load Capacity Dual (In LBS)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>