objects/Product2/fields/Load_Capacity_IN_LBS__c.field-meta.xml
<CustomField>
    <fullName>Load_Capacity_IN_LBS__c</fullName>
    <label>Load Capacity Single (IN LBS)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>