objects/Product2/fields/LOAD_INDEX_LI__c.field-meta.xml
<CustomField>
    <fullName>LOAD_INDEX_LI__c</fullName>
    <label>Load Index (LI)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>144/141</fullName>
            </value>
            <value>
                <fullName>144/142</fullName>
            </value>
            <value>
                <fullName>146/143</fullName>
            </value>
            <value>
                <fullName>149/146</fullName>
            </value>
            <value>
                <fullName>156/150</fullName>
            </value>
            <value>
                <fullName>140/137</fullName>
            </value>
            <value>
                <fullName>135/133</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>