objects/Product2/fields/Max_Speed_In_KMs__c.field-meta.xml
<CustomField>
    <fullName>Max_Speed_In_KMs__c</fullName>
    <label>Max Speed (In KMs)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>