objects/Product2/fields/Max_Speed_In_Miles__c.field-meta.xml
<CustomField>
    <fullName>Max_Speed_In_Miles__c</fullName>
    <label>Max Speed (In Miles)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>