objects/Product2/fields/ORIGIN__c.field-meta.xml
<CustomField>
    <fullName>ORIGIN__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>THAILAND</fullName>
                <label>Thailand</label>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Vietnam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>