objects/Product2/fields/Overall_Diameter_Inches__c.field-meta.xml
<CustomField>
    <fullName>Overall_Diameter_Inches__c</fullName>
    <label>Overall Diameter (Inches)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>