objects/Product2/fields/PATTERN__c.field-meta.xml
<CustomField>
    <fullName>PATTERN__c</fullName>
    <label>Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGHWAY D12</fullName>
                <label>Highway D12</label>
            </value>
            <value>
                <fullName>HIGHWAY D16</fullName>
                <label>Highway D16</label>
            </value>
            <value>
                <fullName>HIGHWAY D21</fullName>
                <label>Highway D21</label>
            </value>
            <value>
                <fullName>HIGHWAY S12</fullName>
                <label>Highway S12</label>
            </value>
            <value>
                <fullName>HIGHWAY S21</fullName>
                <label>Highway S21</label>
            </value>
            <value>
                <fullName>REGIONAL S12</fullName>
                <label>Regional S12</label>
            </value>
            <value>
                <fullName>REGIONAL S21</fullName>
                <label>Regional S21</label>
            </value>
            <value>
                <fullName>REGIONAL T12</fullName>
                <label>Regional T12</label>
            </value>
            <value>
                <fullName>HIGHWAY T21</fullName>
            </value>
            <value>
                <fullName>ASR79</fullName>
            </value>
            <value>
                <fullName>AT552</fullName>
            </value>
            <value>
                <fullName>AZ926</fullName>
            </value>
            <value>
                <fullName>AT563</fullName>
            </value>
            <value>
                <fullName>AD778</fullName>
            </value>
            <value>
                <fullName>AD737</fullName>
            </value>
            <value>
                <fullName>H89 DRIVE PLUS</fullName>
                <label>H89 Drive Plus</label>
            </value>
            <value>
                <fullName>H89 PLUS</fullName>
                <label>H89 Plus</label>
            </value>
            <value>
                <fullName>H94 DRIVE</fullName>
                <label>H94 Drive</label>
            </value>
            <value>
                <fullName>NEO FUEL D3</fullName>
                <label>Neo Fuel D3</label>
            </value>
            <value>
                <fullName>NEO FUEL G3</fullName>
                <label>Neo Fuel G3</label>
            </value>
            <value>
                <fullName>NEO FUEL T3</fullName>
                <label>Neo Fuel T3</label>
            </value>
            <value>
                <fullName>NEO CONTRUCT G</fullName>
                <label>Neo Contruct G</label>
            </value>
            <value>
                <fullName>NEO ALLROADS D+</fullName>
                <label>Neo Allroads D+</label>
            </value>
            <value>
                <fullName>NEO ALLROADS S</fullName>
                <label>Neo Allroads S</label>
            </value>
            <value>
                <fullName>NEO ALLROADS S+</fullName>
                <label>Neo Allroads S+</label>
            </value>
            <value>
                <fullName>NEO ALLROADS T2</fullName>
                <label>Neo Allroads T2</label>
            </value>
            <value>
                <fullName>CD884 R3</fullName>
            </value>
            <value>
                <fullName>CD883 R3</fullName>
            </value>
            <value>
                <fullName>TR529 R3</fullName>
            </value>
            <value>
                <fullName>RH652</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>