objects/Product2/fields/PLY_RATING__c.field-meta.xml
<CustomField>
    <fullName>PLY_RATING__c</fullName>
    <label>Ply Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14 PR</fullName>
            </value>
            <value>
                <fullName>16 PR</fullName>
            </value>
            <value>
                <fullName>18 PR</fullName>
            </value>
            <value>
                <fullName>20 PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>