objects/Product2/fields/Product_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Product_Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Id - 18 Digit</label>
    <type>Text</type>
</CustomField>