objects/Product2/fields/Product_Master__c.field-meta.xml
<CustomField>
    <fullName>Product_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Master</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>