objects/Product2/fields/Production_Year__c.field-meta.xml
<CustomField>
    <fullName>Production_Year__c</fullName>
    <label>Production Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>