objects/Product2/fields/RIM__c.field-meta.xml
<CustomField>
    <fullName>RIM__c</fullName>
    <label>RIM Diameter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19.5</fullName>
            </value>
            <value>
                <fullName>22.5</fullName>
            </value>
            <value>
                <fullName>24.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>