objects/Product2/fields/Section_Width__c.field-meta.xml
<CustomField>
    <fullName>Section_Width__c</fullName>
    <label>Section Width (In mm)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>295</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>255</fullName>
            </value>
            <value>
                <fullName>245</fullName>
            </value>
            <value>
                <fullName>11.4</fullName>
                <isActive>false</isActive>
                <label>11.4</label>
            </value>
            <value>
                <fullName>11.7</fullName>
                <isActive>false</isActive>
                <label>11.7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>