objects/Product2/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>211014840</fullName>
            </value>
            <value>
                <fullName>TH95856</fullName>
            </value>
            <value>
                <fullName>211014838</fullName>
            </value>
            <value>
                <fullName>211014836</fullName>
            </value>
            <value>
                <fullName>TH99533</fullName>
            </value>
            <value>
                <fullName>TH95900</fullName>
            </value>
            <value>
                <fullName>211014819</fullName>
            </value>
            <value>
                <fullName>211014818</fullName>
            </value>
            <value>
                <fullName>211014829</fullName>
            </value>
            <value>
                <fullName>TH16172</fullName>
            </value>
            <value>
                <fullName>TH96211</fullName>
            </value>
            <value>
                <fullName>211014825</fullName>
            </value>
            <value>
                <fullName>211014821</fullName>
            </value>
            <value>
                <fullName>3755800</fullName>
            </value>
            <value>
                <fullName>3756000</fullName>
            </value>
            <value>
                <fullName>3756300</fullName>
            </value>
            <value>
                <fullName>3756300-1</fullName>
            </value>
            <value>
                <fullName>3756000-1</fullName>
            </value>
            <value>
                <fullName>3755800-1</fullName>
            </value>
            <value>
                <fullName>TH96211-1</fullName>
            </value>
            <value>
                <fullName>TH16172-1</fullName>
            </value>
            <value>
                <fullName>TH95900-1</fullName>
            </value>
            <value>
                <fullName>TH99533-1</fullName>
            </value>
            <value>
                <fullName>TH95856-1</fullName>
            </value>
            <value>
                <fullName>211014821-1</fullName>
            </value>
            <value>
                <fullName>211014825-1</fullName>
            </value>
            <value>
                <fullName>211014829-1</fullName>
            </value>
            <value>
                <fullName>211014819-1</fullName>
            </value>
            <value>
                <fullName>211014836-1</fullName>
            </value>
            <value>
                <fullName>211014838-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>