objects/Product2/fields/SPEED_SYMBOL_SS__c.field-meta.xml
<CustomField>
    <fullName>SPEED_SYMBOL_SS__c</fullName>
    <label>Speed Symbol (SS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>