objects/Product2/fields/Studded__c.field-meta.xml
<CustomField>
    <fullName>Studded__c</fullName>
    <label>Studded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>