objects/Product2/fields/Super_Single_Normal__c.field-meta.xml
<CustomField>
    <fullName>Super_Single_Normal__c</fullName>
    <label>Super Single / Normal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Super Single</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>