objects/Product2/fields/Tire_Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Tire_Construction_Type__c</fullName>
    <label>Tire Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radial</fullName>
            </value>
            <value>
                <fullName>Bias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>