objects/Product2/fields/Tire_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Tire_Insurance__c</fullName>
    <label>Tire Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>