objects/Product2/fields/Tire_Position__c.field-meta.xml
<CustomField>
    <fullName>Tire_Position__c</fullName>
    <label>Tire Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Steer-all-position</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>